--- a/main.tex
+++ b/main.tex
@@ -888,6 +888,10 @@ Note that both $\alpha=0,1$ are actually allowed, in the first case no $F_y,F_{y
 
 \include{curvature_perturbations}
 
+\include{matching_scalar_field}
+
+\include{recovering_familiar_fluids}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
