--- a/quadratic_action_curved_spacetime.tex
+++ b/quadratic_action_curved_spacetime.tex
@@ -28,7 +28,7 @@ and the temperature $T\equiv y$ defined by
 We now expand up to quadratic order in the fields $\pi$ and mixed order in $\pi h$, ignoring pure second orders in the metric $h^2$.
 The latter would indeed give a contribution $\propto \, \sqrt{|g|}\, F(\bar{b}, \bar{y}) h^2$ that could be reabsorbed in a redefinition of the cosmological constant.
 We have the expansions
-{
+{\small
 \begin{align}\label{eq:expansions_b_y}
 \begin{aligned}
     &b= \bar{b}(1+\delta b),\quad \bar{b}= \frac{\lambda^3}{a^3},\quad
@@ -294,3 +294,4 @@ Finally we immediately check the speed of sound $c_s^2$, defined as the coeffici
 \begin{align}\label{eq:cs_equiv_cb_flat_spacetime}
     c_b^2:= \frac{\partial p}{\partial \rho}_{\mid \sigma} \overset{\text{proved before}}{=}\frac{-b^2F_{bb} F_{yy}+(F_y-bF_{yb})^2}{F_{yy}\,(yF_y-bF_b)} \overset{\text{easy check}}{\equiv} c_s^2.
 \end{align}
+
