--- a/main.tex
+++ b/main.tex
@@ -558,6 +558,39 @@ which makes it manifest that $c_b^2\geq0$ provided no ghosts $\rho+P>0$, the sec
 
 We also note that $c_b^2\equiv c_s^2$ always, as proved in \eqref{eq:cs_equiv_cb_flat_spacetime} below for flat spacetime, which shows that absence of ghosts, thermodynamic stability and gradient instabilities are closely related.
 
+It is now straightfroward to compute $\frac{\partial P}{\partial \sigma}_{|\rho}$.
+We can proceed as before enforcing 
+\begin{equation}
+    0=d\rho=yF_{yy}dy+(yF_{yb}-F_b)db\quad \Rightarrow\quad \frac{dy}{db}_{|\rho}=\frac{F_b-yF_{yb}}{yF_{yy}}
+\end{equation}
+Then again
+\begin{align}
+    \Gamma:=\frac{dp}{d\sigma}_{\mid\rho}&=\frac{p_b + p_y\, \tfrac{dy}{db}_{\mid\rho}}{\sigma_b + \sigma_y\, \tfrac{dy}{db}_{\mid\rho}}=\frac{-bF_{bb}+(F_y-bF_{by})\tfrac{F_b-yF_{yb}}{yF_{yy}}}{\Big(\tfrac{bF_{by}-F_y}{b^2}\Big)+\tfrac{F_{yy}}{b}\frac{F_b-yF_{yb}}{yF_{yy}}}
+    \\
+    &=\frac{-b^2F_{bb}y^2F_{yy}+(yF_y-byF_{by})(bF_b-byF_{yb})}{y^2F_{yy}\Big(\tfrac{bF_{by}-F_y}{b}\Big)+yF_{yy}(F_b-yF_{yb})}
+\end{align}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 %----------------------------------------------------------------
 \subsection{Matching to quintessence scalar field {\color{red}(WRONG VERSION)}}
