--- a/main.tex
+++ b/main.tex
@@ -565,7 +565,7 @@ We can proceed as before enforcing
 \end{equation}
 Then again
 \begin{align}
-    \Gamma:=\frac{dp}{d\sigma}_{\mid\rho}&=\frac{p_b + p_y\, \tfrac{dy}{db}_{\mid\rho}}{\sigma_b + \sigma_y\, \tfrac{dy}{db}_{\mid\rho}}=\frac{-bF_{bb}+(F_y-bF_{by})\tfrac{F_b-yF_{yb}}{yF_{yy}}}{\Big(\tfrac{bF_{by}-F_y}{b^2}\Big)+\tfrac{F_{yy}}{b}\frac{F_b-yF_{yb}}{yF_{yy}}}
+    \Gamma:=\frac{\partial p}{\partial \sigma}_{\mid\rho}&=\frac{p_b + p_y\, \tfrac{dy}{db}_{\mid\rho}}{\sigma_b + \sigma_y\, \tfrac{dy}{db}_{\mid\rho}}=\frac{-bF_{bb}+(F_y-bF_{by})\tfrac{F_b-yF_{yb}}{yF_{yy}}}{\Big(\tfrac{bF_{by}-F_y}{b^2}\Big)+\tfrac{F_{yy}}{b}\frac{F_b-yF_{yb}}{yF_{yy}}}
     \\
     &=\frac{-b^2F_{bb}y^2F_{yy}+(yF_y-byF_{by})(bF_b-byF_{yb})}{y^2F_{yy}\Big(\tfrac{bF_{by}-F_y}{b}\Big)+yF_{yy}(F_b-yF_{yb})}
 \end{align}
