--- a/recovering_familiar_fluids.tex
+++ b/recovering_familiar_fluids.tex
@@ -78,7 +78,7 @@ The most general solution is, for arbitrary one variable function $f=f(z)$,
 \end{align}
 It captures the barotropic case simply setting $y=0$.
 
-Let us study the implications of $w=\mathrm{const}$ on $c_s^2$ and $\Gamma$.
+Let us study the implications of $w=\mathrm{const}$ on $c_s^2$ defined in \eqref{eq:adiabatic_sound_speed} and $\Gamma$ defined in \eqref{eq:nonadiabatic_pressure_coefficient_gamma}.
 Of course we expect $\Gamma=0$ since we enforced the constant EoS in full generality...\todotag{finish}
 
 
