--- a/bib.bib
+++ b/bib.bib
@@ -22,6 +22,45 @@
     pages = "085029",
     year = "2012"
 }
+@ARTICLE{MaBertschinger_CosmologicalPerturbationTheorySynchronousConformalNewtonianGauges_1995,
+  title         = "Cosmological perturbation theory in the synchronous and
+                   conformal Newtonian gauges",
+  author        = "Ma, Chung-Pei and Bertschinger, Edmund",
+  journal       = "arXiv [astro-ph]",
+  abstract      = "This paper presents a systematic treatment of the linear
+                   theory of scalar gravitational perturbations in the
+                   synchronous gauge and the conformal Newtonian (or
+                   longitudinal) gauge. It differs from others in the literature
+                   in that we give, in both gauges, a complete discussion of all
+                   particle species that are relevant to any flat cold dark
+                   matter (CDM), hot dark matter (HDM), or CDM+HDM models
+                   (including a possible cosmological constant). The particles
+                   considered include CDM, baryons, photons, massless neutrinos,
+                   and massive neutrinos (an HDM candidate), where the CDM and
+                   baryons are treated as fluids while a detailed phase-space
+                   description is given to the photons and neutrinos. Particular
+                   care is applied to the massive neutrino component, which has
+                   been either ignored or approximated crudely in previous
+                   works. Isentropic initial conditions on super-horizon scales
+                   are derived. The coupled, linearized Boltzmann, Einstein and
+                   fluid equations that govern the evolution of the metric and
+                   density perturbations are then solved numerically in both
+                   gauges for the standard CDM model and two CDM+HDM models with
+                   neutrino mass densities $\onu=0.2$ and 0.3, assuming a
+                   scale-invariant, adiabatic spectrum of primordial
+                   fluctuations. We also give the full details of the cosmic
+                   microwave background anisotropy, and present the first
+                   accurate calculations of the angular power spectra in the two
+                   CDM+HDM models including photon polarization, higher neutrino
+                   multipole moments, and helium recombination. The numerical
+                   programs for both gauges are available at
+                   http://arcturus.mit.edu/cosmics/ .",
+  month         =  "11~" # jun,
+  year          =  1995,
+  url           = "http://arxiv.org/abs/astro-ph/9506072",
+  archivePrefix = "arXiv",
+  primaryClass  = "astro-ph"
+}
 @article{Ballesteros:2016kdx,
     author = "Ballesteros, Guillermo and Comelli, Denis and Pilo, Luigi",
     title = "{Thermodynamics of perfect fluids from scalar field theory}",
@@ -35,6 +74,88 @@
     number = "2",
     pages = "025034",
     year = "2016"
+}
+
+@ARTICLE{Weinberg_AdiabaticModesCosmology_2003,
+  title    = "Adiabatic Modes in Cosmology",
+  author   = "Weinberg, Steven",
+  journal  = "Physical Review D",
+  volume   =  67,
+  year     =  2003,
+  url      = "http://dx.doi.org/10.1103/PhysRevD.67.123504",
+  keywords = "Lagrangian Formulation Fluids;lagrangian formulation fluid"
+}
+
+@BOOK{DodelsonSchmidt_ModernCosmology_2025,
+  title     = "Modern cosmology",
+  author    = "Dodelson, Scott and Schmidt, Fabian",
+  publisher = "Academic Press",
+  address   = "San Diego, CA",
+  edition   =  2,
+  month     =  "14~" # aug,
+  year      =  2025,
+  url       = "http://dx.doi.org/10.1016/C2017-0-01943-2",
+  language  = "en"
+}
+@BOOK{Weinberg_Cosmology_2008,
+  title     = "Cosmology",
+  author    = "Weinberg, Steven",
+  publisher = "Oxford University Press",
+  address   = "London, England",
+  month     =  "21~" # feb,
+  year      =  2008,
+  url       = "https://books.google.com/books?hl=en&lr=&id=2wlREAAAQBAJ&oi=fnd&pg=PR11&dq=weinberg+cosmology&ots=vkX3j6-kVv&sig=K3-z7Z9M9aJxkSqeoQC9B11BJxo"
+}
+
+@ARTICLE{Lesgourgues_CosmicLinearAnisotropySolvingSystemCLASSIOverview_2011,
+  title         = "The Cosmic Linear Anisotropy Solving System ({CLASS}) {I}:
+                   Overview",
+  author        = "Lesgourgues, Julien",
+  journal       = "arXiv [astro-ph.IM]",
+  abstract      = "The Cosmic Linear Anisotropy Solving System (CLASS) is a new
+                   accurate Boltzmann code, designed to offer a more
+                   user-friendly and flexible coding environment to
+                   cosmologists. CLASS is very structured, easy to modify, and
+                   offers a rigorous way to control the accuracy of output
+                   quantities. It is also incidentally a bit faster than other
+                   codes. In this overview, we present the general principles of
+                   CLASS and its basic structure. We insist on the friendliness
+                   and flexibility aspects, while accuracy, physical
+                   approximations and performances are discussed in a series of
+                   companion papers.",
+  month         =  "14~" # apr,
+  year          =  2011,
+  url           = "http://arxiv.org/abs/1104.2932",
+  archivePrefix = "arXiv",
+  primaryClass  = "astro-ph.IM"
+}
+
+@BOOK{Baumann_Cosmology_2022,
+  title     = "Cosmology",
+  author    = "Baumann, Daniel",
+  publisher = "Cambridge University Press",
+  address   = "Cambridge, England",
+  abstract  = "The author -- a leading theoretical cosmologist -- expands on his
+               widely acclaimed lecture notes in this self-contained textbook,
+               suitable for the advanced undergraduate or starting graduate
+               level. Presenting the key theoretical foundations of cosmology
+               and describing the observations that have turned the subject into
+               a precision science, the author keeps the student in mind on
+               every page by explaining concepts step-by-step, in an
+               approachable manner. After describing the dynamics of the
+               homogeneous universe, the book traces the evolution of small
+               density fluctuations, which were created quantum-mechanically
+               during inflation and are today observed in the cosmic microwave
+               background and the large-scale structure of the universe. The
+               book is ideally suited as a course companion or for self-study.
+               With all necessary background material covered, students have
+               everything they need to establish an unrivalled understanding of
+               the subject. Complete with many worked examples, figures, and
+               homework problems, this textbook is a definitive resource for
+               advanced students in physics, astronomy and applied mathematics.",
+  year      =  2022,
+  url       = "http://dx.doi.org/10.1017/9781108937092",
+  keywords  = "CambridgeCore\_Citation\_09Feb2026"
 }
 @article{Hu:1998kj,
     author = "Hu, Wayne",
